@startuml

skinparam DefaultFontName "arial"

class Owner {
	- [ parts ] : Set < Exist >
	+ terminate()
}

class Exist {
	+ owner : Owner
	- refs : Set< Ref >
	+ removeRef( ref )
	+ terminate()
}

class Ref {
	- source : Exist
	+ connect()
	..
	+ release()
}

Owner *--o Exist
Owner <|-- Exist

Ref o-o Exist

@enduml
